bad/method_call_non_class_type_string.example_compiler_output
ERROR
[1mbad/method_call_non_class_type_string.lat:3:4: [1;31merror: [0;1mnon-class type `string` has no methods[m
	"".foo();
	  [1;32m^[m
